kubernetes/applications/manifests/pihole-exporter/pihole-exporter-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: pihole-exporter
  labels:
    app.kubernetes.io/name: pihole-exporter
