kubernetes/applications/manifests/pihole-exporter/pihole-exporter-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-exporter-ingress
  namespace: pihole-exporter
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/auth-type: "basic"
    nginx.ingress.kubernetes.io/auth-secret: pihole-exporter-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - pihole-exporter.example.com
      secretName: pihole-exporter-tls
  rules:
    - host: pihole-exporter.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole-exporter
                port:
                  number: 9617
